--- a/data-client/package.json
+++ b/data-client/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
     "swr": "^2.0.4",
-    "webflow-api": "webflow/js-webflow-api#alpha_tests"
+    "webflow-api": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
