--- a/designer-extension/.env.example
+++ b/designer-extension/.env.example
@@ -1,7 +1,11 @@
-CLIENT_ID='clent id'
+# Your application's client ID
+CLIENT_ID='your_client_id'
 
-CLIENT_SECRET='client secret'
+# Your application's secret key
+CLIENT_SECRET='your_client_secret'
 
-OPENAI_API_KEY='openai api key'
+# Your OpenAI API key
+OPENAI_API_KEY='your_openai_api_key'
 
-NEXT_PUBLIC_BACKEND_URL='data client url'
+# URL where your data client runs. Do not include trailing slashes.
+NEXT_PUBLIC_BACKEND_URL='https://your_data_client_url'
